--- a/manifest.yml
+++ b/manifest.yml
@@ -1,2 +1,8 @@
 applications:
 - name: go-hello-buildpack
+  buildpack: https://github.com/cloudfoundry/go-buildpack#v1.3.1
+  memory: 32M
+  stackato:
+    env:
+      GOVERSION:
+        default: 1.4.2
